# DarkSlide

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  darkslide-hd-curve-inversion-guide.md  dust-removal.md  eslint.config.js  index.html  inversion-improvement-plan.md  metadata.json  package-lock.json  package.json  phase10-render-performance.md  phase11-gpu-memory-hardening.md  phase12-pro-workflow.md  phase14-smart-scanning.md  phase15-conversion-quality.md  phase16-implementation.md  phase5-ui-polish.md  phase6-7-implementation.md  phase8-gpu-rendering.md  phase9-implementation.md  plan-next.md  plan-open-in-external-editor.md  plan.md  tsconfig.json  tsconfig.worker.json  vite.config.ts  vitest.setup.ts  zoom-pan-smoothness-improvements.md
.codex/environments/: environment.toml
.github/release-notes/: v1.0.0.md  v1.1.0.md  v1.1.1.md
.github/workflows/: build.yml
Resources/: DarkSlide_Tahoe_refined.icns
src/: App.test.tsx  App.tsx  ScanningSessionWindow.tsx  appVersion.ts  constants.test.ts  constants.ts  index.css  main.tsx  piexifjs.d.ts  types.ts  webgpu.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  scanning.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
src/components/: AppShell.tsx  BatchModal.test.tsx  BatchModal.tsx  ContactSheetModal.test.tsx  ContactSheetModal.tsx  CropOverlay.tsx  CropPane.test.tsx  CropPane.tsx  CurvesControl.test.tsx  CurvesControl.tsx  DocumentThumbnail.tsx  DustOverlay.test.tsx  DustOverlay.tsx  DustPane.tsx  ErrorBoundary.tsx  Histogram.tsx  (+19 more)
(+112 files in other folders)
