[package]
name = "darkslide"
version = "0.9.0"
description = "A professional-grade film negative to positive converter."
authors = ["Kilian Vivien"]
license = "MIT"
repository = "https://github.com/kilianvivien/DarkSlide"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "darkslide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
notify = "7"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
rawler = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
